@@ -132,13 +132,6 @@ int mod_rrd_create_pipe(server *srv, plugin_data *p) {
 		/* not needed */
 		close(to_rrdtool_fds[1]);
 
-		close(STDERR_FILENO);
-
-		if (srv->errorlog_mode == ERRORLOG_FILE) {
-			dup2(srv->errorlog_fd, STDERR_FILENO);
-			close(srv->errorlog_fd);
-		}
-
 		/* set up args */
 		argc = 3;
 		args = malloc(sizeof(*args) * argc);
@@ -149,7 +142,7 @@ int mod_rrd_create_pipe(server *srv, plugin_data *p) {
 		args[i++] = NULL;
 
 		openDevNull(STDERR_FILENO);
-	
+
 		/* we don't need the client socket */
 		for (i = 3; i < 256; i++) {
 			close(i);
